# mcp-server-python-template

./: .claude_code_mcp.json  .dockerignore  .gitignore  DOCKER_DEPLOYMENT.md  DOCKER_DEPLOYMENT_SUCCESS.md  Dockerfile  Dockerfile.production  MCP_CLIENT_CONFIG.md  OMOM_REACT_ONBOARDING_ANALYSIS.md  OMOM_REACT_ONBOARDING_REVIEW.md  REACT_ENHANCEMENT_RECOMMENDATIONS.md  README.md  README_COMPLETE_USAGE.md  README_MCP_DOCKER_USAGE.md  README_SEQUENTIAL_THINK.md  SUPABASE_INTEGRATION_GUIDE.md  SUPABASE_SETUP_GUIDE.md  ai_router.py  build-and-push.sh  config.yaml  config_loader.py  consolidated_prompts_20250730_130341.json  core_utils.py  deploy.sh  docker-compose.production.yml  docker-compose.simple.yml  docker-compose.yml  health_monitor.py  omom-onboarding-types.ts  populate_prompt_database.py  prompt_quality_improver.py  prompt_quality_report.md  pyproject.toml  quick-deploy.sh  redis_cache.py  run_tests.py  security_utils.py  sequential-think-cli  sequential-think-workspace.code-workspace  sequential_think_mcp_server.py  (+12 more)
Promptbase/: .cursorrules  .env  .gitignore  CLAUDE.md  CONTRIBUTING.md  Claude Cache.html  SETUP-SUPABASE.md  add-service-key.md  claude-instructions.xlsx  convert-base-to-csv-usage.md  convert-base-to-csv.js  embed-preview-script.js  embed-preview-style.css  embed-preview.html  embed-style.css  package-lock.json  prompts.csv  quick-setup.md  script.js  style.css  test-connection.js  vibeprompts.csv
backup/: server.py.backup
monitoring/: prometheus.yml
protocals/: sdk.md
scripts/: preload-models.sh
supabase/: config.toml
(+84 files in other folders)
