[project]
name = "mcp-server-python-template"
version = "0.1.0"
description = "A Python template for an MPC server using Starlette and Uvicorn."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1,<1.0.0",         # httpx 0.28.1+ supports Python 3.12
    "mcp>=1.4.1",                   # Confirm mcp supports Python 3.12, update if needed
    "starlette>=0.27.0,<1.0.0",     # starlette 0.27.0+ supports Python 3.12
    "uvicorn>=0.22.0,<1.0.0",       # uvicorn 0.22.0+ supports Python 3.12
]

[project.scripts]
sequential_think_server = "sequential_think_server:main"
